CONTENT-8311 - fix alignment issue

--- a/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/scannerCheck/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/scannerCheck/style.less
@@ -163,7 +163,7 @@
                 float: left;
             }
             .label-wrapper {
-                white-space: pre-wrap;
+                white-space: pre-line;
                 padding: 0 5px 0 5px;
                 overflow-wrap: break-word;
                 word-break:break-all;
@@ -215,7 +215,7 @@
             }
             .label-wrapper {
                 padding: 0 5px 0 5px;
-                white-space: pre-wrap;
+                white-space: pre-line;
                 overflow-wrap: break-word;
                 word-break:break-all;
                 max-width:500px;
@@ -289,7 +289,7 @@
                 float: left;
             }
             .label-wrapper {
-                white-space: pre-wrap;
+                white-space: pre-line;
                 padding: 0 5px 0 5px;
                 overflow-wrap: break-word;
                 word-break:break-all;
@@ -356,7 +356,7 @@
                 float: left;
             }
             .label-wrapper {
-                white-space: pre-wrap;
+                white-space: pre-line;
                 padding: 0 5px 0 5px;
                 overflow-wrap: break-word;
                 word-break:break-all;
@@ -439,7 +439,7 @@
                 float: left;
             }
             .label-wrapper {
-                white-space: pre-wrap;
+                white-space: pre-line;
                 padding: 0 5px 0 5px;
                 overflow-wrap: break-word;
                 word-break:break-all;
@@ -530,7 +530,7 @@
                 float: left;
             }
             .label-wrapper {
-                white-space: pre-wrap;
+                white-space: pre-line;
                 padding: 0 5px 0 5px;
                 overflow-wrap: break-word;
                 word-break:break-all;
